--- a/GUI/GUI.css
+++ b/GUI/GUI.css
@@ -1,7 +1,75 @@
+* {
+    margin-top: 5px;
+    margin-left: 5px;
+}
 h2 {
     text-align: center;
 }
 img {
     height: 150px;
+}
+#user_pic {
+    height: 75px;
+    border-radius: 150px;
+}
+
+#logo {
+    height: 80px;
+}
+
+.page_header {
+    display: flex;
+    align-items: stretch;
+}
+
+ .page_logo {
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.search-box {
+    position: relative;
+    background-color: red;
+    height: 40px;
+    width: 300px;
+    overflow: hidden;
+    border: none;
+    border-radius: 20px;
+    margin-top: 20px;
+}
+.search_in {
+    width: 100%;
+    height: 100%;
+    padding: 5px 20px;
+    outline: none;
+    border: none;
+    background-color: #eeeeff;
     
+
+}
+input::placeholder  {
+    font-size: 15px;
+    font-weight: 600px;
+}
+i {
+    position: absolute;
+    right: 0;
+    font-size: 20px;
+    color: #001a23;
+    background-color: #d7b377;
+    height: 50px;
+    width: 40px;
+    text-align: center;
+    padding: 10px 0;
+    transition: .5s;
+    cursor: pointer;
+    margin: 0;
+}
+i:hover {
+    font-size: 30px;
+}
+
+.modal {
+    width: 600px;
 }
