--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -2,10 +2,11 @@
     margin: 0;
     margin: 0px;
     box-sizing: border-box;
+    max-width: 1000%;
+    height: auto;
 }
 
 body {
-
     background: #f2f2f2;
 }
 .page_header {
@@ -169,3 +170,9 @@ i:hover {
 .input_m {
     margin: 5px;
 }
+
+#user_btn {
+    border: none;
+    background-color: #f2f2f2;
+}
+
